--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon  -r dotenv/config --experimental-json-modules src/index.js"
-
   },
   "keywords": [
     "javascript",
@@ -19,6 +18,8 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
